# audio_analyser

./: .gitmodules  pubspec.yaml
.github/workflows/: cpp.yml  flutter.yml  main.yml
audio_analyser/: .gitattributes  .gitignore  README.md  pubspec.yaml
audio_analyser/.run/: main.dart (demo).run.xml  main.dart.run.xml
audio_analyser/lib/: audio_engine.dart  audio_plot.freezed.dart  fake_audio_engine.dart  generator.dart  main.dart  meters.dart  rate_counter.dart  trigger.dart
audio_analyser/lib/audio/: audio_engine.dart  fake_audio_engine.dart  fft_state.dart  meters_state.dart  meters_state.freezed.dart
audio_analyser/lib/backend/: generator.dart  generator_settings.dart  native_platform_method_channel.dart
audio_analyser/lib/embedding/: juce_connection.dart  native_platform_interface.dart
audio_analyser/linux/: CMakeLists.txt  my_application.cc
audio_analyser/test/: label_test.dart  trigger_test.dart
audio_analyzer/: README.md  pubspec.yaml
audio_analyzer/lib/: audio_plot.dart  fake_audio_engine.dart  main.dart  trigger.freezed.dart
audio_analyzer/lib/embedding/: juce_connection.dart
audio_analyzer/lib/embedding/proto/: update.sh
audio_analyzer/linux/: CMakeLists.txt  my_application.cc
audio_analyzer/test/: label_test.dart  trigger_test.dart
example/: pubspec.yaml
example/lib/: fake_audio_engine.dart  main.dart
example/test/: label_test.dart
host/: CMakeLists.txt  audio_queue.cpp  audio_queue.h  grpc_server_thread.cpp  grpc_server_thread.h  install_embedded.sh  plugin_editor.cpp  plugin_editor.h  plugin_processor.cpp  plugin_processor.h
host/generator/: generator.cpp  generator.h
host/meters/: fft_meter.cpp  fft_meter.h  meter.h  meter_reading.h  rms_meter.cpp  rms_meter.h
host/proto/: CMakeLists.txt  audio_analyser.proto  juce_embed_gtk.proto
lib/: audio_plot.dart  audio_plot.freezed.dart  trigger.dart
test/: audio_plot_test.dart  trigger_test.dart
